[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vezor"
version = "0.1.1"
description = "A collection of algorithm designs for easy application to assist mathematical problems."
authors = [
    {name = "Izzar Suly Nashrudin", email = "Izzarsuly@proton.me"}
]
dependencies = []
readme = "README.md"
license = {file = "LICENSE"}
homepage = "https://github.com/avezoor/vezor"
repository = "https://github.com/avezoor/vezor"
keywords = ["algorithm", "mathematics", "design"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Framework :: Jupyter"
]


[tool.setuptools]
packages = ["vezor"]
